Reverse color index.html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <style>
         /* General Styling */
         :root {
-            --bg-color: #f5f7fa;
-            --card-color: #ffffff;
-            --font-color: #1a1a2e;
-            --header-color: #0f4c81;
-            --primary-color: #0d6efd;
-            --secondary-color: #f9d923;
-            --border-color: #dcdcdc;
+            --bg-color: #1a1a2e;
+            --card-color: #16213e;
+            --font-color: #e0e0e0;
+            --header-color: #ffffff;
+            --primary-color: #0f3460;
+            --secondary-color: #e94560;
+            --border-color: #535353;
         }
 
         body {
