Emojis index.html

--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@
                 <thead>
                     <tr>
                         <th>Team</th>
-                        <th>1st</th>
-                        <th>2nd</th>
-                        <th>3rd</th>
+                        <th>🥇</th>
+                        <th>🥈</th>
+                        <th>🥉</th>
                         <th>4th</th>
-                        <th>Total Points</th>
+                        <th>Score</th>
                     </tr>
                 </thead>
                 <tbody id="leaderboard-body">
