--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
-    <title>Olimpiade Sekolah</title>
+    <title>KOR SMA BN 2025</title>
     <style>
         /* General Styling */
         :root {
@@ -261,7 +261,7 @@
 <body>
 
     <div class="container">
-        <h1>Website Olimpiade Sekolah</h1>
+        <h1>KOR SMA ALOYSIUS BN 2025</h1>
 
         <nav>
             <a href="#leaderboard">Leaderboard</a>
@@ -926,6 +926,7 @@
 </body>
 
 </html>
+
 
 
 
