--- a/index.html
+++ b/index.html
@@ -429,10 +429,15 @@
             ],
             
             Brackets: [
-                { "Sport": "Sepak Bola", "Round": 1, "Match Number": 1, "Team 1": "X Tim 1", "Team 2": "XI Tim 3", "Winner": "X Tim 1", "Score 1": 2, "Score 2": 1 },
-                { "Sport": "Sepak Bola", "Round": 1, "Match Number": 2, "Team 1": "XII Tim 2", "Team 2": "XI Tim 2", "Winner": "XI Tim 2", "Score 1": 0, "Score 2": 3 },
-                { "Sport": "Sepak Bola", "Round": 2, "Match Number": 5, "Team 1": "X Tim 1", "Team 2": "XI Tim 2", "Winner": "X Tim 1", "Score 1": 1, "Score 2": 0 },
-                { "Sport": "Voli putra", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 1", "Team 2": "XI Tim 3", "Winner": "XII Tim 1", "Score 1": 2, "Score 2": 0 },
+                { "Sport": "Basket Putra", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 2", "Team 2": "X Tim 2", "Winner": "", "Score 1": 0, "Score 2": 0 },
+                { "Sport": "Basket Putra", "Round": 1, "Match Number": 2, "Team 1": "XI Tim 2", "Team 2": "XII Tim 1", "Winner": "", "Score 1": 0, "Score 2": 0 },
+                { "Sport": "Basket Putra", "Round": 1, "Match Number": 3, "Team 1": "X Tim 1", "Team 2": "XI Tim 3", "Winner": "", "Score 1": 0, "Score 2": 0 },
+                { "Sport": "Basket Putra", "Round": 1, "Match Number": 4, "Team 1": "XI Tim 1", "Team 2": "XII Tim 3", "Winner": "", "Score 1": 0, "Score 2": 0 },
+                { "Sport": "Basket Putri", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 2", "Team 2": "XI Tim 2", "Winner": "XI Tim 2", "Score 1": 0, "Score 2": 3 },
+                { "Sport": "Voli Putra", "Round": 1, "Match Number": 1, "Team 1": "X Tim 1", "Team 2": "XI Tim 2", "Winner": "X Tim 1", "Score 1": 1, "Score 2": 0 },
+                { "Sport": "Voli Putri", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 1", "Team 2": "XI Tim 3", "Winner": "XII Tim 1", "Score 1": 2, "Score 2": 0 },
+                { "Sport": "Kasti", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 1", "Team 2": "XI Tim 3", "Winner": "XII Tim 1", "Score 1": 2, "Score 2": 0 },
+                { "Sport": "Polo Air", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 1", "Team 2": "XI Tim 3", "Winner": "XII Tim 1", "Score 1": 2, "Score 2": 0 },
             ],
             
             Schedule: [
@@ -926,6 +931,7 @@
 </body>
 
 </html>
+
 
 
 
