delete bracket other than basket

--- a/index.html
+++ b/index.html
@@ -433,11 +433,10 @@
                 { "Sport": "Basket putra", "Round": 1, "Match Number": 2, "Team 1": "XI Tim 2", "Team 2": "XII Tim 1", "Winner": "", "Score 1": 0, "Score 2": 0 },
                 { "Sport": "Basket putra", "Round": 1, "Match Number": 3, "Team 1": "X Tim 1", "Team 2": "XI Tim 3", "Winner": "", "Score 1": 0, "Score 2": 0 },
                 { "Sport": "Basket putra", "Round": 1, "Match Number": 4, "Team 1": "XI Tim 1", "Team 2": "XII Tim 3", "Winner": "", "Score 1": 0, "Score 2": 0 },
-                { "Sport": "Basket putri", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 2", "Team 2": "XI Tim 2", "Winner": "XI Tim 2", "Score 1": 0, "Score 2": 3 },
-                { "Sport": "Voli putra", "Round": 1, "Match Number": 1, "Team 1": "X Tim 1", "Team 2": "XI Tim 2", "Winner": "X Tim 1", "Score 1": 1, "Score 2": 0 },
-                { "Sport": "Voli putri", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 1", "Team 2": "XI Tim 3", "Winner": "XII Tim 1", "Score 1": 2, "Score 2": 0 },
-                { "Sport": "Kasti", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 1", "Team 2": "XI Tim 3", "Winner": "XII Tim 1", "Score 1": 2, "Score 2": 0 },
-                { "Sport": "Polo air", "Round": 1, "Match Number": 1, "Team 1": "XII Tim 1", "Team 2": "XI Tim 3", "Winner": "XII Tim 1", "Score 1": 2, "Score 2": 0 },
+                { "Sport": "Basket putri", "Round": 1, "Match Number": 1, "Team 1": "XI Tim 1", "Team 2": "XII Tim 2", "Winner": "", "Score 1": 0, "Score 2": 0 },
+                { "Sport": "Basket putri", "Round": 1, "Match Number": 2, "Team 1": "XII Tim 3", "Team 2": "XI Tim 2", "Winner": "", "Score 1": 0, "Score 2": 0 },
+                { "Sport": "Basket putri", "Round": 1, "Match Number": 3, "Team 1": "X Tim 1", "Team 2": "X Tim 2", "Winner": "", "Score 1": 0, "Score 2": 0 },
+                { "Sport": "Basket putri", "Round": 1, "Match Number": 4, "Team 1": "XII Tim 1", "Team 2": "XI Tim 3", "Winner": "", "Score 1": 0, "Score 2": 0 },
             ],
             
             Schedule: [
@@ -931,6 +930,7 @@
 </body>
 
 </html>
+
 
 
 
