--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <title>Olimpiade Sekolah</title>
     <style>
         /* [Gaya CSS tidak diubah, tetap sama seperti sebelumnya] */
@@ -279,11 +279,11 @@
                 <thead>
                     <tr>
                         <th>Team Name</th>
-                        <th>1st Place</th>
-                        <th>2nd Place</th>
-                        <th>3rd Place</th>
-                        <th>4th Place</th>
-                        <th>Total Points</th>
+                        <th>🥇</th>
+                        <th>🥈</th>
+                        <th>🥉</th>
+                        <th>🎖️</th>
+                        <th>Score</th>
                     </tr>
                 </thead>
                 <tbody id="leaderboard-body">
@@ -948,3 +948,4 @@
     </script>
 </body>
 </html>
+
