--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
-    <title>Olimpiade Sekolah</title>
+    <title>KOR 2025</title>
     <style>
         /* [Gaya CSS tidak diubah, tetap sama seperti sebelumnya] */
         :root {
@@ -260,7 +260,7 @@
 <body>
 
     <div class="container">
-        <h1>Website Olimpiade Sekolah</h1>
+        <h1>KOR SMA 2025</h1>
 
         <nav>
             <a href="#leaderboard">Leaderboard</a>
@@ -948,4 +948,5 @@
     </script>
 </body>
 </html>
+
 
