--- a/index.html
+++ b/index.html
@@ -274,6 +274,15 @@
 
         <div id="leaderboard" class="section">
             <h2>Leaderboard</h2>
+            
+            <div id="point-explanation">
+                Keterangan Poin: 
+                <span class="point-item">🥇 = 8 Poin</span>
+                <span class="point-item">🥈 = 6 Poin</span>
+                <span class="point-item">🥉 = 4 Poin</span>
+                <span class="point-item">🎖️ = 2 Poin</span>
+            </div>
+            
             <div id="leaderboard-loader" class="loader">Memuat data...</div>
             <table id="leaderboard-table" style="display:none;">
                 <thead>
@@ -946,5 +955,6 @@
     </script>
 </body>
 </html>
+
 
 
