--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
             <h2>Leaderboard</h2>
             
             <div id="point-explanation">
-                Keterangan Poin: 
-                <span class="point-item">🥇 = 8 Poin</span>
-                <span class="point-item">🥈 = 6 Poin</span>
-                <span class="point-item">🥉 = 4 Poin</span>
-                <span class="point-item">🎖️ = 2 Poin</span>
+                Score: 
+                <span class="point-item">🥇 = 8</span>
+                <span class="point-item">🥈 = 6</span>
+                <span class="point-item">🥉 = 4</span>
+                <span class="point-item">🎖️ = 2</span>
             </div>
             
             <div id="leaderboard-loader" class="loader">Memuat data...</div>
@@ -955,6 +955,7 @@
     </script>
 </body>
 </html>
+
 
 
 
