--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>KOR 2025</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+    <link rel="icon" type="image/x-icon" href="https://github.com/TNTh4n/Website-KOR-SMA-Aloysius-BN/blob/main/Logo%20Aloy/logoaloy.ico">
 
 </head>
 <body>
@@ -172,3 +173,4 @@
     </div>
 </body>
 </html>
+
