--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>KOR 2025</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <link rel="icon" type="image/x-icon" href="https://github.com/TNTh4n/Website-KOR-SMA-Aloysius-BN/blob/main/Logo%20Aloy/logoaloy.ico">
+    <link rel="icon" type="image/x-icon" href="https://github.com/TNTh4n/Website-KOR-SMA-Aloysius-BN/blob/main/Logo%20Aloy/logoaloy.ico?raw=true">
 
 </head>
 <body>
@@ -173,4 +173,5 @@
     </div>
 </body>
 </html>
+
 
