--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
             <div id="schedule-loader" class="loader">Loading...</div>
             
             <h3>Today's Matches</h3>
-            <table id="schedule-table-today" style="display:none;">
+            <div class="table-responsive">
+                <table id="schedule-table-today" style="display:none;">
+                    </table>
+            </div>
                 <thead>
                     <tr>
                         <th>Time</th>
@@ -131,7 +134,10 @@
             <p id="no-matches-today" style="display:none;">Tidak ada pertandingan hari ini.</p>
 
             <h3 style="margin-top: 30px;">Upcoming Matches</h3>
-            <table id="schedule-table-upcoming" style="display:none;">
+            <div class="table-responsive">
+                <table id="schedule-table-upcoming" style="display:none;">
+                    </table>
+            </div>
                 <thead>
                     <tr>
                         <th>Date</th>
@@ -164,7 +170,10 @@
                 </select>
             </div>
             <div id="roster-loader" class="loader">Pilih tim untuk melihat daftar pemain.</div>
-            <table id="roster-table" style="display:none;">
+            <div class="table-responsive">
+                <table id="roster-table" style="display:none;">
+                    </table>
+            </div>
                 <thead>
                     <tr>
                         <th>Nama Pemain</th>
@@ -195,3 +204,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
